test/Sema/moveonly_closure_ownership_inference.code
// RUN: %target-language-frontend %s -emit-sil -verify

struct NC: ~Copyable {
  fn borrow() {}
  consuming fn consume() {}
  mutating fn mutate () {}
}

struct Box<Wrapped: ~Copyable> {
  consuming fn map(_ transform: (consuming Wrapped)->Void) {  }
}

struct Tree: ~Copyable {
  static fn insert(_ box: consuming Box<Self>) {
    box.map { x  in x.insert() }
  }

  consuming fn insert() {  }
}

fn withConsuming(_ body: (consuming NC) -> Void) {
  body(NC())
}

fn withBorrowing(_ body: (borrowing NC) -> Void) {
  body(NC())
}

fn withMutating(_ body: (inout NC) -> Void) {
  var nc = NC()
  body(&nc)
}

fn withShared(_ body: (__shared NC) -> Void) {
  body(NC())
}

fn withOwned(_ body: (__owned NC) -> Void) {
  body(NC())
}

withMutating { nc in
    nc.mutate()
}

withConsuming { nc in
    nc.consume()
}

withBorrowing { // expected-error {{'$0' is borrowed and cannot be consumed}}
  $0.borrow()
  $0.consume() // expected-note {{consumed here}}
}

withShared { // expected-error {{'$0' is borrowed and cannot be consumed}}
  $0.borrow()
  $0.consume() // expected-note {{consumed here}}
}

withOwned {
  $0.consume()
}

do {
  immutable clos: (consuming NC) -> Void = {
    $0.consume()
  }
  clos(NC())
}
